--- a/Interfaz_CARINOR-2.0/packages.config
+++ b/Interfaz_CARINOR-2.0/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Bunifu.UI.WinForms" version="5.3.0" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
-  <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net452" />
+  <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net452" requireReinstallation="true" />
   <package id="Visual.Reactive.WinForms" version="1.0.0" targetFramework="net472" />
 </packages>
